# algo-prediction

./: .gitignore  README.md  pyproject.toml
algo_prediction/: config.py  domain.py  test_backend.py  test_dju.py  test_dju_monthly.py  test_merge_split.py  test_merge_split1.py
algo_prediction/algo_services/: run_algo_services.py
algo_prediction/backend_gestion/: adls_silver.py  base.py  silver_results_writer.py
algo_prediction/modeling/: co2.py  decision.py  dju_model.py  features.py  imputation.py  mean_model.py  metrics.py  outliers.py  postprocess.py  status.py  training.py
algo_prediction/preprocessing/: dju.py  invoices.py  model_table.py  months.py  usage_data.py
docs/: USECASES_TEST.docx  USECASES_TEST.md
